# geopandas-unary_union_bug

./: .gitignore  noxfile.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_bug.py
