[tool.poetry]
name = "geopandas-unary_union_bug"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
pygeos = "^0.10.1"
pytest = "^6.2.4"
nox = "^2021.6.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
