[tool.poetry]
name = "geopandas-unary_union_bug"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
geopandas = "*"
pygeos = "*"
pytest = "*"
nox = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
